--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.32.2"
   },
