--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.0.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
-    "react-hook-form": "^7.32.2"
+    "react-hook-form": "^7.32.2",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
